--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ img {
 }
 .adress {
   font-style: normal;
+  margin-right: 40px;
 }
 .button {
   font-weight: 500;
@@ -40,6 +41,11 @@ img {
   color: var(--white);
   background: var(--iris);
   cursor: pointer;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
 }
 .button:hover {
   background-color: var(--ocean);
@@ -70,14 +76,21 @@ img {
   line-height: 1.2;
   color: var(--navy-blue);
   letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 8px;
 }
 .employee-position {
   font-size: 16px;
   line-height: 1.5;
   color: var(--slate);
+  text-align: center;
+}
+.employee-text {
+  padding: 32px 16px;
 }
 .footer {
   background-color: var(--navy-blue);
+  padding: 100px 0;
 }
 .footer-text {
   font-size: 16px;
@@ -106,6 +119,7 @@ img {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  padding: 24px 0 24px;
   color: var(--navy-blue);
 }
 .link-menu:hover {
@@ -118,6 +132,7 @@ img {
   list-style: none;
   display: flex;
   flex-direction: row;
+  gap: 24px;
 }
 .list-menu {
   display: flex;
@@ -129,6 +144,7 @@ img {
   font-weight: 700;
   font-size: 18px;
   line-height: 1.17;
+  margin-right: 76px;
   letter-spacing: 0.03em;
   color: var(--iris);
   text-transform: uppercase;
@@ -145,6 +161,7 @@ img {
   text-align: center;
   letter-spacing: 0.02em;
   color: var(--white);
+  max-width: 496px;
 }
 .navigation {
   display: flex;
@@ -158,10 +175,24 @@ img {
   letter-spacing: 0.02em;
   color: var(--navy-blue);
 }
+.photo-text {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
 .photo-mark {
   font-size: 16px;
   line-height: 1.5;
   color: var(--slate);
+  margin-bottom: 8px;
+}
+.portfolio-list {
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.portfolio-list-element {
+  width: calc((100% - 48px) / 3);
 }
 .section {
   padding: 120px 0px 120px 0px;
@@ -174,12 +205,17 @@ img {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--navy-blue);
+  margin-bottom: 72px;
 }
 .section-one {
   background-color: var(--navy-blue);
+  padding: 188px 0;
 }
 .section-three {
   background-color: var(--cloud);
+}
+.strengths-list-element {
+  width: calc((100% - 72px) / 4);
 }
 .strengths-title {
   font-weight: 500;
@@ -187,6 +223,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
+  margin-bottom: 8px;
 }
 .strengths-description {
   color: var(--slate);
@@ -199,4 +236,18 @@ img {
 }
 .team-list {
   background-color: var(--white);
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
